k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus-dev
spec:
  selector:
    app: nexus
  ports:
    - protocol: TCP
      port: 8081
